--- a/src/ui/src/root/signup/signup.html
+++ b/src/ui/src/root/signup/signup.html
@@ -1,5 +1,6 @@
 <main class="container-fluid">
   <div class="col-sm-4 col-sm-offset-4">
+    
     <h2>{{$t('signup.title')}}</h2>
     <p>{{$t('signup.instruction')}}</p>
 
@@ -22,7 +23,7 @@
     </div>
 
     <div class="form-group">
-      <input type="password" class="form-control" :placeholder="$t('signup.placeholder.password')" v-model="signup.password" @input="$v.signup.password.$touch()">
+      <input type="password" class="form-control" v-model="signup.password" :placeholder="$t('signup.placeholder.password')" @input="$v.signup.password.$touch()">
       <span v-show="$v.signup.password.$error">
       <span class="alert-danger" v-if="!$v.signup.password.required">{{$t('validation.required')}}</span>
       <span class="alert-danger" v-if="!$v.signup.password.complexity">{{$t('signup.complexity')}}</span>
@@ -30,7 +31,7 @@
     </div>
 
     <div class="form-group">
-      <input type="password" class="form-control" :placeholder="$t('signup.placeholder.confirmPassword')" v-model="signup.confirmPassword"
+      <input type="password" class="form-control" v-model="signup.confirmPassword" :placeholder="$t('signup.placeholder.confirmPassword')"
         @input="$v.signup.confirmPassword.$touch()">
         <span v-show="$v.signup.password.$error">
         <span class="alert-danger" v-if="!$v.signup.confirmPassword.required">{{$t('validation.required')}}</span>
@@ -38,7 +39,6 @@
         </span>
     </div>
 
-    <button class="btn btn-primary" :class="{ 'btn-primary' : $v.signup.$error || $v.signup.$invalid, 'btn-success' : !$v.signup.$error && !$v.signup.$invalid }"
-      v-bind:disabled="$v.signup.$error || $v.signup.$invalid" @click="submit()">{{$t('signup.button.submit')}}</button>
+    <button class="btn btn-primary" v-bind:disabled="$v.signup.$error || $v.signup.$invalid" @click="submit()">{{$t('signup.button.submit')}}</button>
   </div>
 </main>
