fix props mutation in user list

--- a/src/ui/src/admin/users/user-list.html
+++ b/src/ui/src/admin/users/user-list.html
@@ -1,9 +1,9 @@
 <main class="container-fluid">
-  <div class="col-sm-12 col-md-8 col-lg-6">
+  <div class="col-sm-12">
     <fieldset>
       <legend>{{$t('admin.navigation.users')}}</legend>
       <div>
-        <table class="table table-striped .table-responsive">
+        <table class="table table-striped table-responsive">
           <thead>
             <tr>
               <th>{{$t('dict.name')}}</th>
@@ -29,7 +29,7 @@
           <tfoot v-show="total">
             <tr>
               <td colspan="4">
-                <div v-if="page > 1" @click="navigate(false)" class="btn btn-primary"><i class="fa fa-arrow-left"></i></div>
+                <div v-if="currentPage > 1" @click="navigate(false)" class="btn btn-primary"><i class="fa fa-arrow-left"></i></div>
                 <div class="paging-splice">{{start}}-{{end}} <span class="paging-of">{{$t('dict.of')}}</span> <span class="paging-total">{{total}}</span></div>
                 <div v-if="(end < total)" @click="navigate(true)" class="btn btn-primary"><i class="fa fa-arrow-right"></i></div>
               </td>
