restyled ui layout, menu and colours

--- a/src/ui/src/admin/dashboard/dashboard.html
+++ b/src/ui/src/admin/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
   <h1>{{$t('navigation.dashboard')}}</h1>
 
   <section class="row text-center placeholders">
