--- a/src/ui/src/admin/reports/reports.html
+++ b/src/ui/src/admin/reports/reports.html
@@ -1,4 +1,4 @@
-<main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2">
+<main class="col-md-10 border-top-md-down">
   <h1>{{$t('dict.reports')}}</h1>
   <p>
     {{$t('dict.notImplemented')}}
