--- a/src/ui/src/root/home/home.html
+++ b/src/ui/src/root/home/home.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
   <div v-if="!authenticated">
     <h1 class="mb-2">{{$t('home.title.begin')}} <img src="~assets/images/logo.png" height="36" alt=""> {{$t('home.title.end')}}</h1>
     <div v-html="$t('home.body[0]')"></div>
