--- a/src/ui/src/admin/users/user.html
+++ b/src/ui/src/admin/users/user.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
   <div class="col-sm-12">
     <fieldset v-if="user">
       <legend>{{user.displayName}}</legend>
@@ -31,12 +31,12 @@
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label" for="enabled">{{$t('dict.enabled')}}</label>
-          <div class="col-sm-2">
-            <slide id="enabled" v-model="user.enabled" :on-text="onText" :off-text="offText" v-on:input="updateUserStatus(user)"></slide>
+          <div class="col-sm-2 col-form-like-label">
+            <check id="enabled" v-model="user.enabled" :on-text="onText" :off-text="offText" v-on:input="updateUserStatus(user)"></check>
           </div>
           <label class="col-sm-2 col-form-label" for="verified">{{$t('dict.verified')}}</label>
-          <div class="col-sm-2">
-            <slide id="verified" v-model="user.verified" :enabled="user.enabled" :on-text="onText" :off-text="offText" v-on:input="updateUserStatus(user)"></slide>
+          <div class="col-sm-2 col-form-like-label">
+            <check id="verified" v-model="user.verified" :enabled="user.enabled" :on-text="onText" :off-text="offText" v-on:input="updateUserStatus(user)"></check>
           </div>
         </div>
         <div class="form-group row">
