--- a/src/ui/src/root/footer/footer.html
+++ b/src/ui/src/root/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <nav class="navbar navbar-inverse bg-inverse fixed-bottom">
+  <nav class="nav navbar navbar-inverse bg-inverse fixed-bottom justify-content-center">
     <small>{{$t('site.copyright')}}</small>
   </nav>
 </footer>
