--- a/src/ui/src/root/profile/profile-sidebar.html
+++ b/src/ui/src/root/profile/profile-sidebar.html
@@ -1,5 +1,5 @@
-<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-  <ul class="nav nav-pills nav-justified flex-column">
+<nav class="col-md-2">
+  <ul class="nav nav-justified flex-md-column">
     <li class="nav-item">
       <a class="nav-link" href="#">{{$t('dict.link')}} 1</a>
     </li>
