--- a/src/ui/src/root/signup/signup.html
+++ b/src/ui/src/root/signup/signup.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container">
   <div class="col-sm-4 col-sm-offset-4">
     
     <h2>{{$t('signup.title')}}</h2>
