add global plugin for common helpers

--- a/src/ui/src/admin/users/user-list.html
+++ b/src/ui/src/admin/users/user-list.html
@@ -3,7 +3,7 @@
     <fieldset>
       <legend>{{$t('admin.navigation.users')}}</legend>
       <div>
-        <table class="table table-striped table-responsive">
+        <table class="table table-striped">
           <thead>
             <tr>
               <th>{{$t('dict.name')}}</th>
