tweak status bar

--- a/src/ui/app/root/signup/signup.html
+++ b/src/ui/app/root/signup/signup.html
@@ -1,5 +1,5 @@
-<main class="col">
-  <div class="col-sm-4 ml-auto">
+<main class="row">
+  <div class="col-sm-4">
     
     <h2>{{$t('signup.title')}}</h2>
     <p>{{$t('signup.instruction')}}</p>
