--- a/src/ui/app/admin/users/user-list.html
+++ b/src/ui/app/admin/users/user-list.html
@@ -19,7 +19,7 @@
             </td>
             <td class="hidden-md-down">{{user.email}}</td>
             <td>
-              <check v-model="user.enabled" :on-text="onText" :off-text="offText" v-on:input="updateUserStatus(user)"></check>
+              <toggle v-model="user.enabled" :on-text="onText" :off-text="offText" v-on:input="updateUserStatus(user)"></toggle>
             </td>
           </tr>
         </tbody>
